fix footer on small viewports

--- a/source/stylesheets/_clients.scss
+++ b/source/stylesheets/_clients.scss
@@ -1,14 +1,15 @@
 .clients {
   background-color: #f6f6f6;
-  // border-top: 1px solid #ddd;
   padding: 40px 0;
   text-align: center;
 
   .logos {
     img {
       margin: 0 3em;
-      max-height: 80px;
+      max-height: 50px;
       opacity: 0.6;
+
+      @inc
     }
   }
 }
